Closed Bug 1001361 Opened 11 years ago Closed 11 years ago

HTTP Cache directory created inside Cache directory (nesting)

Categories

(Core :: Networking: Cache, defect)

30 Branch
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla31
Tracking Status
firefox30 --- fixed
firefox31 --- fixed

People

(Reporter: mayhemer, Assigned: mayhemer)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Regression from bug 964898, landed on 30. Under some (fortunately rare) circumstances it may happen we append "Cache" leaf name to the HTTP cache directory name more then once, see [1], the mObserver->DiskCacheParentDirectory() is not cloned. I have found Cache/Cache in my local (regular) profile dir! Found during work on bug 916052 (the patch for that bug has the fix, but I plan to land it on 32, however this needs to go in now). [1] http://hg.mozilla.org/mozilla-central/diff/955e0211df10/netwerk/cache/nsCacheService.cpp
Attachment #8412501 - Flags: review+
Attachment #8412501 - Flags: approval-mozilla-aurora?
Comment on attachment 8412501 [details] [diff] [review] v1 (as in the patch for bug 916052, r=michal) [Approval Request Comment] Bug caused by (feature/regressing bug #): 964898 User impact if declined: Lose access to HTTP cache data while these data are left on disk, creation of a nested Cache directory that for the time of the session eats disk space and after the session ends it's left forever Testing completed (on m-c, etc.): just landed Risk to taking this patch (and alternatives if risky): low, the code path creating this bug is executed rarely and is very simple String or IDL/UUID changes made by this patch: none
Assignee: nobody → honzab.moz
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Attachment #8412501 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: