Bug 1001361 - HTTP Cache directory created inside Cache directory. r=michal, a=lsblakk